<resources>
    <string name="app_name">ToDo</string>
    <string name="add_task_name">add task</string>
    <string name="detail_name">Detail</string>
    <string name="add_task">Add new task</string>
    <string name="button_save">Save</string>
    <string name="operation_canceled">Operation Canceled</string>
    <string name="name_required">Name is required</string>
    <string name="task_name_here">Task name here</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="updated_successful">Task updated</string>
    <string name="deleted_successful">Task deleted</string>
    <string name="delete_all">Delete All</string>
    <string name="order_by_asc">Order by ASC</string>
    <string name="order_by_date">Order by Date</string>
    <string name="add_date">Date</string>
    <string name="add_time">Time</string>
    <string name="date_not_set">Create task without date</string>
    <string name="menu_task_list">Tasks</string>
    <string name="menu_settings">Settings</string>
    <string name="notification_channel_name">Task</string>
    <string name="notification_channel_description">Notification to remember you about your task</string>
    <string name="notification_text">Let\'s get it done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>